Correción del nombre del archivo .php EventSource

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     }
 
     // Inicia la conexión SSE
-    var sse = new EventSource('tu_script.php'); // Reemplaza 'tu_script.php' con la URL de tu script PHP SSE
+    var sse = new EventSource('obtener_datos.php'); // Reemplaza 'tu_script.php' con la URL de tu script PHP SSE
 
     // Escucha eventos SSE
     sse.addEventListener('message', handleSSE);
