Versión mejorada de la página web - reset
Signed-off-by: HenryCapdevilla <henrydaniel2002@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         /* Style for the clear button */
         .leaflet-control-button {
-            background-image: url('broom.png');
+            background-image: url('broom.jpg');
             background-size: cover;
             width: 32px; /* Set the width and height to match your image size */
             height: 32px;
