--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </head>
 <body>
-    <div class="Body">
-        <div class="Menu">
-            <img id="menu_bar" src="Icons/bars-solid.svg" alt="Menú">
-        </div>
-        <div class="container">
-        <div id="map" class="map" style="height: 90%;"></div>
-
-        </div>
+    <div class="Menu">
+        <img id="menu_bar" src="Icons/lista.png" alt="Menú">
+    </div>
+    <div class="container">
+        <div id="map" class="map" style="height: 100%;"></div>
     </div>
     <script>
     // Initialize the Leaflet map
@@ -31,6 +28,7 @@
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
+
 
     // Comprueba si el navegador admite la geolocalización
     if ("geolocation" in navigator) {
@@ -166,6 +164,25 @@
             document.getElementById("timestamp").textContent = data[0].fecha + " " + data[0].hora;
         }
     }
+    // Create additional Control placeholders
+    function addControlPlaceholders(map) {
+        var corners = map._controlCorners,
+            l = 'leaflet-',
+            container = map._controlContainer;
+
+        function createCorner(vSide, hSide) {
+            var className = l + vSide + ' ' + l + hSide;
+
+            corners[vSide + hSide] = L.DomUtil.create('div', className, container);
+        }
+
+        createCorner('verticalcenter', 'left');
+        createCorner('verticalcenter', 'right');
+    }
+    addControlPlaceholders(map);
+
+// Change the position of the Zoom Control to a newly created placeholder.
+map.zoomControl.setPosition('bottomright');
     </script>
 </body>
 </html>
