Agregue el  selector de fecha y conexión html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="Menu">
-        <img id="menu_bar" src="Icons/lista.png" alt="Menú">
+        <a href="History.html">
+            <img id="menu_bar" src="Icons/lista.png" alt="Menú">
+        </a>
     </div>
     <div class="container">
         <div id="map" class="map" style="height: 100%;"></div>
