Html update y cree DatePicker

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="History.html">
             <img id="menu_bar" src="Icons/lista.png" alt="Menú">
         </a>
+        <img id="logo" src="Icons/Logo.png" alt="Menú">
     </div>
     <div class="container">
         <div id="map" class="map" style="height: 100%;"></div>
@@ -183,8 +184,8 @@
     }
     addControlPlaceholders(map);
 
-// Change the position of the Zoom Control to a newly created placeholder.
-map.zoomControl.setPosition('bottomright');
+    // Change the position of the Zoom Control to a newly created placeholder.
+    map.zoomControl.setPosition('bottomright');
     </script>
 </body>
 </html>
