--- a/History.html
+++ b/History.html
@@ -66,6 +66,17 @@
         function mostrarFechas() {
             var fechaInicialValor = fechaInicial.value;
             var fechaFinalValor = fechaFinal.value;
+
+            // Comprueba si el navegador admite la geolocalización
+            if ("geolocation" in navigator) {
+                navigator.geolocation.getCurrentPosition(function (position) {
+                var lat = position.coords.latitude;
+                var lon = position.coords.longitude;
+        
+                // Centra el mapa en la ubicación actual del usuario
+                map.setView([lat, lon], 14); // Puedes ajustar el nivel de zoom (14 en este ejemplo) según tus necesidades
+                });
+            }   
         
             // Verificar si ambas fechas han sido ingresadas
             if (fechaInicialValor && fechaFinalValor) {
