--- a/History.html
+++ b/History.html
@@ -102,7 +102,6 @@
                 // Una de las fechas (o ambas) aún no ha sido ingresada, no hagas nada o muestra un mensaje de error.
             }
         }        
-
         // Función para mostrar marcadores en el mapa
         function mostrarMarcadoresEnMapa(data) {
             // Borra los marcadores existentes en el mapa
@@ -140,6 +139,17 @@
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
+
+        // Comprueba si el navegador admite la geolocalización
+        if ("geolocation" in navigator) {
+            navigator.geolocation.getCurrentPosition(function (position) {
+            var lat = position.coords.latitude;
+            var lon = position.coords.longitude;
+                
+            // Centra el mapa en la ubicación actual del usuario
+            map.setView([lat, lon], 14); // Puedes ajustar el nivel de zoom (14 en este ejemplo) según tus necesidades
+            });
+        }   
         
         // Custom Leaflet control to clear the map
         var clearButtonControl = L.Control.extend({
