--- a/History.html
+++ b/History.html
@@ -99,9 +99,9 @@
                 // Una de las fechas (o ambas) aún no ha sido ingresada, no hagas nada o muestra un mensaje de error.
             }
         }        
-        // Función para mostrar marcadores en el mapa
+        // Función para mostrar únicamente dos marcadores en el mapa
         function mostrarMarcadoresEnMapa(data) {
-            // Borra los marcadores existentes en el mapa
+            // Borra los marcadores existentes en el mapa y las polilíneas
             for (var i = 0; i < markers.length; i++) {
                 map.removeLayer(markers[i]);
             }
@@ -112,48 +112,42 @@
             }
             polylines = [];
 
-            var firstMarker = null;
-            var lastMarker = null;
+            var primeraCoordenada = null;
+            var ultimaCoordenada = null;
 
-            // Itera sobre los datos y crea marcadores para cada punto de coordenada
+            // Itera sobre los datos y encuentra la primera y última coordenada dentro del rango de fechas
             for (var i = 0; i < data.length; i++) {
                 var latitud = data[i].latitud;
                 var longitud = data[i].longitud;
                 var fecha = data[i].fecha;
-                var hora = data[i].hora;
 
-                var marker = L.marker([latitud, longitud]);
-
-                // Agrega información adicional al marcador (puedes personalizar esto según tus necesidades)
-                marker.bindPopup("Fecha: " + fecha + "<br>Hora: " + hora);
-    
-                // Agrega el marcador al array de marcadores
-                markers.push(marker);
-
-                if (i === 0) {
-                    firstMarker = marker;
-                }
-
-                if (i === data.length - 1) {
-                    lastMarker = marker;
-                }
-
-                // Crea una polilínea que conecta este marcador con el siguiente (excepto el último)
-                if (i < data.length - 1) {
-                    var nextLatitud = data[i + 1].latitud;
-                    var nextLongitud = data[i + 1].longitud;
-
-                    var polyline = L.polyline([[latitud, longitud], [nextLatitud, nextLongitud]], { color: 'blue' });
-                    polylines.push(polyline);
-                    map.addLayer(polyline);
+                // Verifica si la fecha está dentro del rango seleccionado
+                if (fecha >= fechaInicial.value && fecha <= fechaFinal.value) {
+                    // Si es la primera coordenada dentro del rango, crea un marcador rojo
+                    if (!primeraCoordenada) {
+                        var marker = L.marker([latitud, longitud], { icon: redIcon });
+                        primeraCoordenada = marker;
+                    }
+                    // Actualiza la última coordenada dentro del rango a medida que avanza
+                    ultimaCoordenada = L.latLng(latitud, longitud);
                 }
             }
 
-            // Crea una polilínea que conecta el primer y último marcador
-            if (firstMarker && lastMarker) {
-                var polyline = L.polyline([firstMarker.getLatLng(), lastMarker.getLatLng()], { color: 'red' });
+            // Crea una polilínea que conecta la primera y última coordenada dentro del rango
+            if (primeraCoordenada && ultimaCoordenada) {
+                var polyline = L.polyline([primeraCoordenada.getLatLng(), ultimaCoordenada], { color: 'blue' });
                 polylines.push(polyline);
                 map.addLayer(polyline);
+            }  
+
+            // Agrega los marcadores al mapa
+            if (primeraCoordenada) {
+                map.addLayer(primeraCoordenada);
+            }
+            if (ultimaCoordenada) {
+                var blueIcon = L.divIcon({ className: 'blue-icon' });
+                var ultimaCoordenadaMarker = L.marker(ultimaCoordenada, { icon: blueIcon });
+                map.addLayer(ultimaCoordenadaMarker);
             }
         }
 
