Agregue el logo flotante "responsive" #4

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <img id="logo" src="Icons/Logo.png" alt="Menú">
     </div>
     <div class="container">
+        <img id="banner_bar" src="Icons/Banner_logo.png" alt="Menú">
         <div id="map" class="map" style="height: 100%;"></div>
     </div>
     <script>
