--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         .leaflet-control-button {
             background-image: url('broom.png');
             background-size: cover;
-            width: 32px; /* Set the width and height to match your image size */
+            width: 32px; /* Set the width and height to match your image */
             height: 32px;
         }
 
