--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             height: 32px;
         }
 
-        /* Style for the info */
+        /* Style for the */
         .leaflet-control-info {
             background-color: white;
             border: 1px solid #ccc;
