Debug de las fechas

--- a/History.html
+++ b/History.html
@@ -92,6 +92,8 @@
             var fechaFinalValor = fechaFinal.value;
             var HoraInicial = new Date(horaInicioValor.value);
             var HoraFinal = new Date(horaFinValor.value);
+            console.log(HoraFinal)
+            console.log(HoraInicial)
             // Verificar si ambas fechas han sido ingresadas
             if (fechaInicialValor && fechaFinalValor && HoraInicial && HoraFinal) {
                 // Ambas fechas han sido ingresadas, puedes continuar con la solicitud AJAX y mostrar en el mapa.
